[NIAD-3128] Address failing test